--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,18 @@
 {
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev" : "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.19",
+    "@types/node": "^20.8.6",
+    "typescript": "^5.2.2"
   }
 }
