--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -6,17 +6,19 @@
     "start": "npx expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081' && expo start",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^2.0.0-beta.0",
-    "@types/react-native": "^0.72.3",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-devtools-core": "^4.28.4",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "react-native-debugger-open": "^0.4.3",
     "typescript": "^5.1.3"
   },
   "private": true
