--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -7,8 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081' && expo start",
-    "postinstall": "rndebugger-open"
+    "tunnel": "npx expo start --tunnel"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -16,12 +15,13 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@reduxjs/toolkit": "^2.0.0-beta.0",
     "expo": "~49.0.13",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-devtools-core": "^4.28.4",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
